docs and better auth and delete accounts
