# server/routes.go
@@ -10,11 +10,12 @@ import (
 func (s *Server) RegisterRoutes(e *echo.Echo) {
 
 	e.POST("/users", s.RegisterUserAccount)
+	e.DELETE("/users", s.DeleteUserAccount, s.AuthApiKeyMiddleware)
 
 	e.POST("/matches", s.CreateMatch, s.AuthApiKeyMiddleware)
 	e.GET("/matches/:id/play", s.JoinMatch, s.AuthApiKeyMiddleware)
 	e.PUT("/matches/:id", s.PutMove, s.AuthApiKeyMiddleware)
-	e.GET("/matches/:id", s.GetBoardString)
+	e.GET("/matches/:id", s.GetBoardFEN)
 	e.GET("/matches/:id/img", s.GetBoardImage, s.AuthApiKeyMiddleware)
 
 	e.POST("/auth/login", s.GetApiKeyTryRenew)
